Log duplicate shipping option ID warning in web payments API.

Before this patch, passing duplicate shipping option identifiers into
web payments API was silently treated as an indicator of invalid
shipping address. This matches the spec, but the web developer may be
confused.

The fix is to add a warning message in console:
  "Duplicate shipping option identifier '<id>' is treated as an invalid
  address indicator."

Spec:
https://w3c.github.io/browser-payment-api/#constructor
(See step 8, "Process shipping options.")

BUG=711677

Review-Url: https://codereview.chromium.org/2830683002
Cr-Commit-Position: refs/heads/master@{#465751}

Former-commit-id: fed3fc6630e9ea6248153708b7f9a301b98624c4